--- a/SafeHouseApp/package.json
+++ b/SafeHouseApp/package.json
@@ -6,7 +6,38 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "@exponent/react-native-navigator": "^0.4.3",
     "react": "^0.14.8",
-    "react-native": "^0.24.1"
+    "react-native": "^0.24.1",
+    "react-native-i18n": "0.0.8",
+    "react-native-keyboard-spacer": "^0.1.6",
+    "react-native-vector-icons": "^1.3.4"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "react"
+    ],
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    },
+    "rules": {
+      "camelcase": [
+        "error",
+        {
+          "properties": "never"
+        }
+      ],
+      "no-use-before-define": 0,
+      "no-underscore-dangle": 0,
+      "quotes": [
+        0,
+        "single"
+      ]
+    }
   }
 }
