--- a/SafeHouseApp/package.json
+++ b/SafeHouseApp/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "@exponent/react-native-navigator": "^0.4.3",
-    "cryptico": "^1.0.2",
+    "keypair": "^1.0.0",
     "react": "^0.14.8",
     "react-native": "^0.24.1",
+    "react-native-device-info": "^0.9.3",
     "react-native-i18n": "0.0.8",
     "react-native-keyboard-spacer": "^0.1.6",
     "react-native-vector-icons": "^1.3.4"
