--- a/SafeHouseApp/package.json
+++ b/SafeHouseApp/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@exponent/react-native-navigator": "^0.4.3",
     "keypair": "^1.0.0",
+    "moment": "^2.13.0",
     "react": "^0.14.8",
     "react-native": "^0.24.1",
     "react-native-device-info": "^0.9.3",
